# k8s-infrastructure

./: .gitignore  CLAUDE.md  README.md  go.mod
argocd/: guestbook-application.yaml
argocd/guestbook-app/: deployment.yaml  service.yaml
argocd/nginx-gateway/apps/: nginx-gateway-dev.yaml  nginx-gateway-prd.yaml
argocd/nginx/apps/: nginx-dev-app.yaml  nginx-prd-app.yaml
argocd/nginx/base/: deployment.yaml  kustomization.yaml  service.yaml
argocd/nginx/base/gateway/: gateway.yaml  httproute.yaml
argocd/nginx/overlays/dev/: kustomization.yaml
argocd/test-nginx-app/: argocd-application.yaml  deployment.yaml  service.yaml
cmd/k8s-deploy/: main.go
config/: cluster-inventory.yaml  platform-config.yaml
go-installer/: README.md  k8s-installer.go
installers/: cleanup.sh  install-dev.sh  install-prd.sh  worker-init.yaml
installers/k8s-dev/: go.mod  k8s-dev  main  main.go
installers/k8s-prd/: Cargo.toml  control-plane-init.yaml
installers/k8s-prd/src/: main.rs
pkg/addons/: addons.go
pkg/binaries/: manager.go  manager_test.go
pkg/cloudinit/: cloudinit.go
pkg/config/: config.go
pkg/images/: manager.go  manager_test.go
pkg/network/: manager.go  manager_test.go
pkg/platform/: detector.go  detector_test.go
pkg/provider/: interface.go
pkg/provider/multipass/: multipass.go  multipass_test.go
pkg/provider/native/: native.go  native_test.go
pkg/resources/: calculator.go  calculator_test.go
rust-installer/: Cargo.toml  README.md
rust-installer/src/: main.rs  main.rs.backup
scripts/: check-prerequisites.sh  install-argocd.sh
(+1 files in other folders)
