[package]
name = "k8s-prd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "k8s-prd"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
colored = "2.1"
chrono = "0.4"
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"
crossbeam = "0.8"
indicatif = "0.17"
